# lot

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
example/: CMakeLists.txt
include/mz/: lot.h
test/: CMakeLists.txt  main.cpp
test/lot/: lot.cpp
